--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
         cd backend
         go mod download
 
+    - name: Install golint
+      run: go install golang.org/x/lint/golint@latest
+
     - name: Lint backend
       run: |
         cd backend
@@ -50,7 +53,7 @@ jobs:
       run: |
         cd frontend
         npm run lint
-        
+
   check-docker-compose:
     runs-on: ubuntu-latest
     needs: [backend, frontend]
