--- a/cerbos/policies/users.yaml
+++ b/cerbos/policies/users.yaml
@@ -9,8 +9,12 @@ resourcePolicy:
       roles:
         - user
         - admin
+        - manager
+        - CEO
     - actions:
         - delete
       effect: EFFECT_ALLOW
       roles:
         - admin
+        - manager
+        - CEO
